ascent_macro_tests/tests/macros/fail/invalid_rule_body_arity_too_many.err.txt
error: Wrong arity for relation fact. Actual arity: 1
  --> /tests/macros/fail/invalid_rule_body_arity_too_many.rs:11:18
   |
11 |     rule(42) <-- fact(x, y);
   |                  ^^^^
